[tool.poetry]
name = "phishml"
version = "1.1.5"
description = "Phishing email predictions using machine learning models."
authors = ["Anshumaan Mishra <anmishra@nd.gov>", "Jaden L. Evanger <jevanger@nd.gov", "Maksym Valko <mvalko@nd.gov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.12"
pydantic = "2.11.3"
requests = "2.32.3"
uvicorn = "0.37.0"
mypy = "1.15.0"
ruff ="0.11.4"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
pandas = "^2.2.3"
nltk = "^3.9.1"
floret = "^0.10.5"
version = "0.1.0"
dvc = "^3.59.2"
sqlalchemy = "^2.0.0"
pymysql = "^1.0.0"
shap = "^0.47.2"
lime = "^0.2.0.1"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
